--- a/react-tailwind-setup/package.json
+++ b/react-tailwind-setup/package.json
@@ -7,12 +7,14 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.4.9",
     "i18next": "^21.10.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-i18next": "^12.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
