--- a/react-tailwind-setup/package.json
+++ b/react-tailwind-setup/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.2.1",
     "react-i18next": "^12.3.1",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.10.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.7.1"
