--- a/react-tailwind-setup/package.json
+++ b/react-tailwind-setup/package.json
@@ -25,7 +25,9 @@
     "test": "react-scripts test",
     "lint-md": "markdownlint \"**/*.md\" --ignore node_modules",
     "spell-check": "cspell \"**/*\" --no-progress",
-    "prepare": "husky"
+    "prepare": "husky",
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "eslintConfig": {
     "extends": [
@@ -48,9 +50,17 @@
   "devDependencies": {
     "autoprefixer": "^10.4.22",
     "cspell": "^9.4.0",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "husky": "^9.1.7",
     "markdownlint-cli": "^0.47.0",
     "postcss": "^8.5.6",
+    "prettier": "^3.7.4",
     "tailwindcss": "3.4"
   }
 }
